--- a/assets/css/education.css
+++ b/assets/css/education.css
@@ -30,20 +30,28 @@
     align-items: center;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 10px 10px 10px black;
+    box-shadow: 0px 15px 25px rgb(0, 0, 0,);
     cursor: pointer;
-    transition: all 1s;
+    transition: 0.5s;
 }
 
-.education__container-item:hover{
+.education__container:hover .education__container-item{
+    filter: blur(10px);
+    transform: scale(0.9);
+    opacity: 0.8;
+}
+
+.education__container .education__container-item:hover{
+    filter: blur(0px);
     transform: scale(1.2);
-    box-shadow: 20px 20px 20px black;
+    opacity: 1;
 }
 
 .education__container-item-graduate{
     width: 100%;
-    height: 60%;
+    height: 100%;
     background-color: #f0efeb;
+    clip-path: circle(70% at center 0);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,4 +68,5 @@
     font-family: hellofont;
     letter-spacing: 2px;
     transform: translatex(50%, 50%);
+    padding-bottom: 2rem;
 }
