--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -43,14 +43,14 @@
 }
 
 .navation__container-item1 img {
-    height: 100%;
+    height: 70%;
     width: auto;
 }
 
 .navation__container-item1 h3 {
     color: #f0efeb;
     font-family: logofont;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: 300;
 }
 
@@ -99,4 +99,48 @@
     100%{
         transform: scale(1);
     }
+}
+
+.navation__container-line {
+    display: none;
+}
+
+@media (min-width:0) and (max-width:480px) {
+    .navation {
+        width: 100%;
+    }
+
+    .navation__container {
+        width: 72%;
+        margin: auto;
+    }
+    
+    .navation__container-item1 img {
+        height: 50%;
+        width: auto;
+    }
+
+    .navation__container-item1 h3 {
+        font-size: 0.8rem;
+        padding-top: 0.3rem;
+    }
+
+    .navation__container-item2 {
+        display: none;
+    }
+
+    .navation__container-line {
+        display: block;
+
+    }
+    .navation__container-line i {
+        color: #edf2fb;
+    }
+}
+
+@media (min-width:481) and (max-width:820px) {
+    .navation__container-item2 ul li a {
+        padding-bottom: 0.4rem;
+    }
+
 }
