--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -43,14 +43,14 @@
 
 .home__container p {
     font-size: 2rem;
-    font-family: headerfont;
+    font-family: 'Roboto', sans-serif;
     color: #f0efeb;
     z-index: 2;
     position: relative;
     font-weight: 100;
 }
 
-.home .hi {
+.hi {
     position: absolute;
     width: auto;
     height: auto;
@@ -67,8 +67,79 @@
     position: absolute;
 }
 
-@media only screen and (max-width: 815px) {
+@media (min-width:0) and (max-width:480px) {
+    .home {
+        width: 100%;
+        height: 420px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .bg_video {
+        height: 100%;
+        width: auto;
+    }
+
+    .home__container {
+        position: absolute;
+        width: 320px;
+        height: 160px;
+        top: 30%;
+    }
+
     .home__container h1 {
         font-size: 2rem;
+    }
+
+    .home__container p {
+        font-size: 1rem;
+    }
+
+    .holder {
+      display: none;
+    }
+
+    .hi {
+        display: none;
+    }
+}
+
+@media (min-width:481px) and (max-width:820px) {
+    .home {
+        height: 320px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .bg_video {
+        height: 100%;
+        width: auto;
+    }
+
+    .home__container {
+        position: absolute;
+        width: 320px;
+        height: 160px;
+        top: 30%;
+    }
+
+    .home__container h1 {
+        font-size: 2rem;
+    }
+
+    .home__container p {
+        font-size: 1rem;
+        z-index: 3;
+    }
+
+    .holder {
+      display: none;
+    }
+
+    .hi {
+        width: 80px;
+        height: auto;
+        left: 65%;
+        z-index:1;
     }
 }
