--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@
 
 
 
-
 @font-face {
     font-family: logofont;
     src: url(../fonts/Helios\ Regular.otf)
@@ -37,4 +36,17 @@
 
 html {
     scroll-behavior: smooth;
+    font-size: 16px;
+}
+
+@media (min-width:0) and (max-width:480px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+@media (min-width:481px) and (max-width:820px) {
+    html {
+        font-size: 14px;
+    }
 }
